[project]
name = "broadaxis-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.59.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "mcp[cli]>=1.12.2",
    "pinecone>=7.3.0",
    "sentence-transformers>=5.0.0",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
]
